--- a/index.html
+++ b/index.html
@@ -3,38 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>UK Archive</title>
+  <title>UK Archive - A Town Called Panic: Christmas Panic!</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <h1>UK Archive</h1>
-    <nav>
-      <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#videos">Videos</a></li>
-      </ul>
-    </nav>
+    UK Archive - A Town Called Panic: Christmas Panic!
   </header>
-  
   <main>
-    <section id="videos">
-      <h2>Featured Videos</h2>
-      <div id="christmas-log" class="hidden">
-        <h3>Christmas Special</h3>
-        <iframe 
-          src="https://archive.org/embed/christmaslog" 
-          width="640" 
-          height="360" 
-          frameborder="0" 
-          allowfullscreen>
-        </iframe>
-      </div>
-    </section>
+    <div class="video-section">
+      <div id="video-player"></div>
+    </div>
+    <div class="info-section">
+      <h2>A Town Called Panic: Christmas Panic!</h2>
+      <p>
+        French version of the special with UK English audio to improve the quality of the video 
+        posted by <strong>@THEADVENTURESOFKEVINTHECARROT</strong> on YouTube. I tried my best to sync 
+        the audio as the French version has more video and less audio.
+      </p>
+      <img src="https://via.placeholder.com/300x200?text=A+Town+Called+Panic" alt="A Town Called Panic Scene">
+    </div>
   </main>
-  
   <footer>
-    <p>© 2024 UK Archive</p>
+    © 2024 UK Archive - Relive the Past
   </footer>
   <script src="script.js"></script>
 </body>
