--- a/index.html
+++ b/index.html
@@ -8,24 +8,31 @@
 </head>
 <body>
   <header>
-    UK Archive - A Town Called Panic: Christmas Panic!
+    <div class="header-content">
+      <h1>UK Archive</h1>
+      <p>A Town Called Panic: Christmas Panic!</p>
+    </div>
   </header>
   <main>
-    <div class="video-section">
-      <div id="video-player"></div>
-    </div>
-    <div class="info-section">
-      <h2>A Town Called Panic: Christmas Panic!</h2>
-      <p>
-        French version of the special with UK English audio to improve the quality of the video 
-        posted by <strong>@THEADVENTURESOFKEVINTHECARROT</strong> on YouTube. I tried my best to sync 
-        the audio as the French version has more video and less audio.
-      </p>
-      <img src="https://via.placeholder.com/300x200?text=A+Town+Called+Panic" alt="A Town Called Panic Scene">
+    <div class="content-container">
+      <div class="video-section" id="video-player">
+        <!-- Video content will be injected here based on date -->
+      </div>
+      <div class="info-section">
+        <h2>A Town Called Panic: Christmas Panic!</h2>
+        <p>
+          French version of the special with UK English audio to improve the quality of the video 
+          posted by <strong>@THEADVENTURESOFKEVINTHECARROT</strong> on YouTube. I tried my best to sync 
+          the audio as the French version has more video and less audio.
+        </p>
+        <p class="note">
+          Available from November 16 to January 1.
+        </p>
+      </div>
     </div>
   </main>
   <footer>
-    © 2024 UK Archive - Relive the Past
+    <p>© 2024 UK Archive - Relive the Past</p>
   </footer>
   <script src="script.js"></script>
 </body>
