--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>UK Archive - A Town Called Panic: Christmas Panic!</title>
+  <title>UK Archive - A Town Called Panic: Christmas Panic! and More</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <div class="header-content">
       <h1>UK Archive</h1>
-      <p>A Town Called Panic: Christmas Panic!</p>
+      <p>Explore Classic UK Shows & Specials</p>
     </div>
   </header>
   <main>
     <div class="content-container">
       <div class="video-section" id="video-player">
-        <!-- Video content will be injected here based on date -->
+        <!-- Video content for A Town Called Panic: Christmas Panic! will be injected here based on date -->
       </div>
       <div class="info-section">
         <h2>A Town Called Panic: Christmas Panic!</h2>
@@ -27,6 +27,19 @@
         </p>
         <p class="note">
           Available from November 16 to January 1.
+        </p>
+      </div>
+    </div>
+
+    <!-- Additional video section for Iain's Last Day in the CBBC Office -->
+    <div class="content-container">
+      <div class="video-section">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/mTpMIajv_nQ?si=50pFA60wngSMJL7e" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+      </div>
+      <div class="info-section">
+        <h2>Iain's Last Day in the CBBC Office - 1st February 2013</h2>
+        <p>
+          A farewell special marking Iain's last day in the CBBC office, featuring behind-the-scenes moments and heartfelt goodbyes.
         </p>
       </div>
     </div>
